# token-api

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  Makefile  README.md  diesel.docker.toml  entrypoint.sh  setup_db.sh
db/: database.db
migrations/2025-11-28-143456-0000_evm_tokens/: down.sql  up.sql
migrations/2026-04-02-210000_evm_tokens_chain_id_i64/: down.sql  up.sql
src/: chainlist.rs  db.rs  evm_token.rs  handlers.rs  lib.rs  main.rs  schema.rs  token.rs  types.rs
src/repositories/: mod.rs
src/repositories/sqlite/: evm_token.rs  mod.rs
src/services/: mod.rs  provider.rs
src/services/chainlist/: mod.rs
src/services/evm/: erc20.rs  error.rs  igra_tests.rs  mod.rs
